--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,54 @@
 *{box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .container{
-    background-color: deeppink;
+    background-color: rgb(255, 94, 20);
     width: 1200px;
     margin: 0 auto;
     padding: 0 1em;
-    display:flex;
-    flex-wrap: wrap;
-  
-
+    display: flex;
+    flex-wrap: wrap
+    
+}
+nav{
+    background-color: darkkhaki;
+    display: flex;
+    justify-content: center;
 }
 
 section{
     background-color: lawngreen;
     width: 900px;
-    height: 300px;
-}
+    height: 900px;
+   display: flex;
+   /*flex-wrap: wrap;*/
+   justify-content: center;
+   align-items: flex-start;
+   
+   }
 
+
+
+.hijo img {
+   border :1px solid black;
+   width: 200px;
+   height: 150px;
+   background-color: cadetblue;
+
+}
+   
     
 aside{
     background-color: mediumblue;
-    width: 300px;
-   height: 300px;
+    width: 200px;
+   height:300px;
    flex-shrink: 0;
+ justify-content: flex-end;
  
 
+}
+
+footer{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
