logotipo y menu mavegacion

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 *{box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+ font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+ 
+ }
+/*
 .container{
-   /* background-color: rgb(255, 94, 20);*/
+   /* background-color: rgb(255, 94, 20);
     width: 1200px;
     margin: 0 auto;
     padding: 0 1em;
@@ -18,7 +22,7 @@
 }
     
 nav{
-    /*background-color: rgb(129, 235, 194);*/
+    /*background-color: rgb(129, 235, 194);
     display: flex;
     justify-content: center;
 }
@@ -26,7 +30,7 @@ a:hover{
     color:red;
 }
 section{
-    /*background-color: lawngreen;*/
+    /*background-color: lawngreen;
     width: 900px;
     height: 900px;
    display: flex;
@@ -35,7 +39,7 @@ section{
    }
 
 h2{
-    /*background-color: rgb(237, 217, 247);*/
+    /*background-color: rgb(237, 217, 247);
     justify-content: center;
     display: flex;
 }
@@ -52,7 +56,7 @@ h2:hover{
    }
     
 aside{
-   /* background-color: mediumblue;*/
+   /* background-color: mediumblue;
     width: 200px;
    height:300px;
    flex-shrink: 0;
@@ -60,4 +64,4 @@ aside{
  
 
 }
-
+*/
