--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,7 @@
 .container{
     width: 100%;
     max-width: 1200px;
-    margin:0 auto;
+    margin: 0 auto;
     padding: 0 1em;
     background-color: blanchedalmond;
 
@@ -11,13 +11,25 @@
     justify-content: center;
     flex-direction: row;
 }
-.mb-1{
+
+/* margenes y padding */
+
+.mb-05 {
+    margin-bottom: .5em;
+}
+
+.mb-1 {
     margin-bottom: 1em;
 }
 
-.mb-2{
+.mb-2 {
     margin-bottom: 2em;
 }
-.mb-3{
+
+.mb-3 {
     margin-bottom: 3em;
+}
+
+.pad-1 {
+    padding: 1em;
 }
