--- a/css/basic.css
+++ b/css/basic.css
@@ -8,7 +8,9 @@
 text-decoration: none;
     color: blue;
 }
-
+body{
+    overflow: hidden;
+}
 /*a:hover{
     color:mediumorchid;
 }*/
@@ -18,4 +20,7 @@ text-decoration: none;
 }
 .centrar {
     text-align: center;
+}
+input{
+    font-size: inherit;
 }
